[gd_scene format=3 uid="uid://f7h6ee2ame8f"]

[ext_resource type="Script" uid="uid://dquisndsie4uw" path="res://GUI/DialogSystem/scripts/dialog_system.gd" id="1_yc0v7"]
[ext_resource type="Texture2D" uid="uid://rm53878r4345" path="res://GUI/DialogSystem/sprites/text-bubble.png" id="2_gjg0o"]
[ext_resource type="FontFile" uid="uid://bno0fmmwqsv8u" path="res://GUI/DialogSystem/fronts/Abaddon Light.ttf" id="3_p2qco"]
[ext_resource type="FontFile" uid="uid://0l1epq6rv3eg" path="res://GUI/DialogSystem/fronts/Abaddon Bold.ttf" id="4_ngyf5"]
[ext_resource type="Texture2D" uid="uid://c6y8grrkqm3ui" path="res://GUI/DialogSystem/sprites/portraits/npc_portrait_01.png" id="5_imjx8"]
[ext_resource type="AudioStream" uid="uid://vqlg5carjarf" path="res://GUI/DialogSystem/audio/voice_blip.wav" id="6_5rua8"]
[ext_resource type="FontFile" uid="uid://cej52riqklxlx" path="res://GUI/DialogSystem/fronts/m5x7.ttf" id="6_m6bf1"]
[ext_resource type="Script" uid="uid://bimnqmicx5uxx" path="res://GUI/DialogSystem/scripts/dialog_portrait.gd" id="6_ngl6g"]
[ext_resource type="Theme" uid="uid://drmowq34063pb" path="res://GUI/DialogSystem/dialog_choice_theme.tres" id="9_iofs6"]

[sub_resource type="Gradient" id="Gradient_yc0v7"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gjg0o"]
gradient = SubResource("Gradient_yc0v7")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yc0v7"]
content_margin_left = 14.0
content_margin_top = 10.0
content_margin_right = 14.0
content_margin_bottom = 10.0
texture = ExtResource("2_gjg0o")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imjx8"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 1.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id="Animation_5rua8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m6bf1"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.3192323, 1.542, 1.1036931, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5rua8"]
_data = {
&"RESET": SubResource("Animation_5rua8"),
&"default": SubResource("Animation_m6bf1")
}

[node name="DialogSystem" type="CanvasLayer" unique_id=547466977]
process_mode = 3
layer = 3
script = ExtResource("1_yc0v7")

[node name="DialogUI" type="Control" parent="." unique_id=2056333926]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DialogUI" unique_id=746919284]
modulate = Color(0, 0, 0, 0.54901963)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_gjg0o")

[node name="PanelContainer" type="PanelContainer" parent="DialogUI" unique_id=1013225106]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -383.0
offset_top = -81.0
offset_right = -7.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_yc0v7")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogUI/PanelContainer" unique_id=745493527]
layout_mode = 2
theme_override_colors/default_color = Color(0.4392157, 0.39607844, 0.32156864, 1)
theme_override_fonts/normal_font = ExtResource("3_p2qco")
theme_override_fonts/bold_font = ExtResource("4_ngyf5")
bbcode_enabled = true
text = "Example [b]Text[/b]!!!
[wave]Wavy text[/wave]
[shake]shaking text[/shake]"
fit_content = true
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="NameLable" type="Label" parent="DialogUI" unique_id=1020315859]
layout_mode = 0
offset_left = 97.0
offset_top = 172.0
offset_right = 137.0
offset_bottom = 195.0
theme_override_colors/font_color = Color(0.89411765, 0.8627451, 0.79607844, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_ngyf5")
text = "Name"

[node name="PortraitSprite" type="Sprite2D" parent="DialogUI" unique_id=1481346468]
position = Vector2(51, 199)
texture = ExtResource("5_imjx8")
hframes = 4
script = ExtResource("6_ngl6g")

[node name="Timer" type="Timer" parent="DialogUI" unique_id=1060642288]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialogUI" unique_id=415173599]
stream = ExtResource("6_5rua8")
max_polyphony = 6
bus = &"SFX"

[node name="DialogProgressIndicator" type="PanelContainer" parent="DialogUI" unique_id=162487454]
self_modulate = Color(0.2268983, 0.4660567, 0.26770014, 1)
layout_mode = 0
offset_left = 438.0
offset_top = 253.0
offset_right = 476.0
offset_bottom = 267.0
theme_override_styles/panel = SubResource("StyleBoxFlat_imjx8")

[node name="Label" type="Label" parent="DialogUI/DialogProgressIndicator" unique_id=454197258]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_m6bf1")
text = "NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogUI/DialogProgressIndicator" unique_id=410864177]
libraries/ = SubResource("AnimationLibrary_5rua8")
autoplay = &"default"

[node name="VBoxContainer" type="VBoxContainer" parent="DialogUI" unique_id=463996648]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.347
anchor_top = 0.19100001
anchor_right = 0.347
anchor_bottom = 0.19100001
offset_left = -4.0599976
offset_top = -3.0700035
offset_right = 248.94
offset_bottom = 97.92999
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_iofs6")
alignment = 1

[node name="Button" type="Button" parent="DialogUI/VBoxContainer" unique_id=1203496346]
layout_mode = 2
text = "Menu"

[node name="Button2" type="Button" parent="DialogUI/VBoxContainer" unique_id=771134272]
layout_mode = 2
text = "Menu"

[node name="Button3" type="Button" parent="DialogUI/VBoxContainer" unique_id=728913102]
layout_mode = 2
text = "Menu"
